--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header class="cabecalho">
         <h1 class="titulo-principal"> Westeros</h1>
-        <p>isso é um meme</p>
+          <h1 class="texto"><p>isso é um meme</p></h1>
     </header>
     <main>
 
