--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
 </head>
 <body>
     <header class="cabecalho">
-        <h1 class="titulo-principal"> Westeros</h1>
-          <h1 class="texto"><p>isso é um meme</p></h1>
+        <img src="img/logosemfundo.png" alt="Logo loja RPG" class="cabecalho">
+        <nav class="cabecalho-nav">
+            <a class="cabecalho_nav_link" href="#">Home</a>
+            <a class="cabecalho_nav_link"href="#">Contato</a>
+        </nav>
     </header>
     <main>
 
