--- a/index.html
+++ b/index.html
@@ -9,13 +9,16 @@
 </head>
 <body>
     <header class="cabecalho">
-        <img src="img/logosemfundo.png" alt="Logo loja RPG" class="cabecalho-img">
+        <img src="img/logosemfundo.png" alt="Logo loja RPG" class="cabecalho-imgS">
         <nav class="cabecalho-nav">
             <a class="cabecalho_nav_link" href="#">Home</a>
             <a class="cabecalho_nav_link"href="#">Contato</a>
         </nav>
     </header>
-    <main>
+    <main class="principal">
+        <section class="principal-capa">
+            
+        </section>
 
     </main>
     <footer>
