--- a/index.html
+++ b/index.html
@@ -17,8 +17,14 @@
     </header>
     <main class="principal">
         <section class="principal-capa">
-            
-        </section>
+        <div class="principal-capa_conteudo">
+            <h1 class="principal-capa_titulo"> Westeros RPG
+            <p class="principal-capa-texto"> Itens de RPG
+            <p class="principal-capa-texto"> Dados de RPG
+            <p class="principal-capa-texto"> Itens de RPG
+        </div>
+            <img src="img/logosemfundo.png" alt=""> 
+                </section>
 
     </main>
     <footer>
