--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="cabecalho">
-        <img src="img/logosemfundo.png" alt="Logo loja RPG" class="cabecalho-imgS">
+        <img src="img/logosemfundo.png" alt="Logo loja RPG" class="cabecalho-img">
         <nav class="cabecalho-nav">
             <a class="cabecalho_nav_link" href="#">Home</a>
             <a class="cabecalho_nav_link"href="#">Contato</a>
