--- a/index.html
+++ b/index.html
@@ -17,12 +17,15 @@
     </header>
     <main class="principal">
         <section class="principal-capa">
-        <div class="principal-capa_conteudo">
-            <h1 class="principal-capa_titulo"> Westeros RPG
+            <div class="principal-capa_combotao">
+            <div class="principal-capa_conteudo">
+            <h1 class="principal-capa_titulo"> Livros de RPG
             <p class="principal-capa-texto"> Itens de RPG
             <p class="principal-capa-texto"> Dados de RPG
-            <p class="principal-capa-texto"> Itens de RPG
+                <a href="#" class="principal-capa_botao" Itens de RPG></a>
+            </div>
         </div>
+        <a href="#" class="principal-capa_botao">Dados de RPG</a>
             <img src="img/logosemfundo.png" alt=""> 
                 </section>
 
