--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
         <section class="principal-capa">
             <div class="principal-capa_combotao">
             <div class="principal-capa_conteudo">
-            <h1 class="principal-capa_titulo"> Livros de RPG
-            <p class="principal-capa-texto"> Itens de RPG
-            <p class="principal-capa-texto"> Dados de RPG
-                <a href="#" class="principal-capa_botao" Itens de RPG></a>
+            <h1 class="principal-capa_titulo"> Livros de RPG</h1>
+            <p class="principal-capa_texto"> Itens de RPG</p>
+            <p class="principal-capa_texto"> Dados de RPG</p>
+            <a href="#" class="principal-capa_botao">Itens de RPG</a>
             </div>
+            <a href="#" class="principal-capa_botao botao_secundario"> Comece a comprarS</a>
         </div>
-        <a href="#" class="principal-capa_botao">Dados de RPG</a>
             <img src="img/logosemfundo.png" alt=""> 
                 </section>
 
