--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
         <section class="principal-capa">
             <div class="principal-capa_combotao">
             <div class="principal-capa_conteudo">
-            <h1 class="principal-capa_titulo"> Livros de RPG</h1>
+            <h1 class="principal-capa_titulo"> Westeros RPG</h1>
             <p class="principal-capa_texto"> Itens de RPG</p>
             <p class="principal-capa_texto"> Dados de RPG</p>
             <a href="#" class="principal-capa_botao">Itens de RPG</a>
             </div>
-            <a href="#" class="principal-capa_botao botao_secundario"> Comece a comprarS</a>
+            <a href="#" class="principal-capa_botao botao_secundario"> Comece a comprar</a>
         </div>
             <img src="img/logosemfundo.png" alt=""> 
                 </section>
