--- a/index.html
+++ b/index.html
@@ -28,6 +28,23 @@
         </div>
             <img src="img/logosemfundo.png" alt=""> 
                 </section>
+                <section class="propaganda">
+                    <img src="img/815V+Agq+nL._AC_UF1000,1000_QL80_.jpg" alt="produto 1" class="propaganda_img">
+                    <div class="propaganda_conteudo">
+                        <h2 class="propaganda_titulo"> Compre os melhores item de RPG do mundo</h2>
+                        <p class="propaganda_texto">Temos itens vindos de toda Terra-Média!</p>
+                    </div>
+                </section>
+                <section class="propaganda">
+                    <div class="propaganda_2">
+                        <div class="propaganda_conteudo">
+                            <h2 class="propaganda_titulo">Temos mais de 100 lojas em Foz do Iguaçu</h2>
+                            <p class="propaganda_texto"> Você nos encontra em qualquer lugar, confira no botão abaixo</p>
+                        </div>  
+                        <a class="principal-capa_botao" href="#"> Confira nossas lojas </a>   
+                    </div>
+                    <img class="propaganda_img_2" src="img/cthulhu-1005495_1280.jpg" alt="dadinhos">
+                </section>
 
     </main>
     <footer>
