--- a/index.html
+++ b/index.html
@@ -42,8 +42,25 @@
                             <p class="propaganda_texto"> Você nos encontra em qualquer lugar, confira no botão abaixo</p>
                         </div>  
                         <a class="principal-capa_botao" href="#"> Confira nossas lojas </a>   
-                    </div>
+                    </div> 
                     <img class="propaganda_img_2" src="img/cthulhu-1005495_1280.jpg" alt="dadinhos">
+                </section>
+                <section class="dispositivos">
+                    <h2 class="dispositivos_titulo">Você pode acessar nossa loja por:</h2>
+                    <ul class="dispositivos_lista">
+                        <li>
+                            <img src="img/tv.svg" alt="">
+                            <h3 class="lista_item"> TV </h3>
+                        </li>
+                        <li>
+                            <img src="img/computador.svg" alt="">
+                            <h3 class="lista_item"> Computador </h3>
+                        </li>
+                        <li>
+                            <img src="img/celular.svg" alt="">
+                            <h3 class="lista_item"> Celular e Tablet </h3>
+                        </li>
+                    </ul>
                 </section>
 
     </main>
