--- a/index.html
+++ b/index.html
@@ -45,6 +45,15 @@
                     </div> 
                     <img class="propaganda_img_2" src="img/cthulhu-1005495_1280.jpg" alt="dadinhos">
                 </section>
+                <section class="propaganda">
+                    <div class="propaganda_3">
+                        <div class="propaganda_conteudo">
+                            <h2 class="propaganda_titulo">Compre conosco</h2>
+                            <p class="propaganda_texto"> somos os melhores</p>
+                        </div>  
+                    </div> 
+                    <img class="propaganda_img_3" src="img/dice-7307198_1280.jpg" alt="dadinhos">
+                </section>
                 <section class="dispositivos">
                     <h2 class="dispositivos_titulo">Você pode acessar nossa loja por:</h2>
                     <ul class="dispositivos_lista">
@@ -64,7 +73,33 @@
                 </section>
 
     </main>
-    <footer>
+    <footer class="rodape">
+        <img class="img/logosemfundo.png" alt="logo">
+        <ul class="rodape_lista">
+            <li class="lista_link">
+                <a href="">Dados de RPG</a>
+            </li>
+            <li class="lista_link">
+                <a href="">Livros de RPG</a>
+            </li>
+            <li class="lista_link">
+                <a href="">Livros de RPG</a>
+            </li>
+            <li class="lista_link">
+                <a href="">Bonequinhos feitos a mão</a>
+            </li>
+            <li class="lista_link">
+                <a href="">Caixa de dados</a>
+            </li>
+            <li class="lista_link">
+                <a href="">Cartas de RPG</a>
+            </li>
+            <li class="lista_link">
+                <a href="">Torre de Dados</a>
+            </li>
+        </ul>
+
+        <p class="rodape_texto"> 2024 Pedro Marconatto todos os direitos reservados</p>
 
     </footer>
 </body>
